--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pure CSS Tabs with Slide Indicator</title>
+    <title>Glow Gradient Loader Ring</title>
     <link rel="stylesheet" href="./src/css/style.css">
     <script defer src="./src/js/script.js"></script>
 </head>
 <body>
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
